# kvstore

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  client.py  local_cluster.py  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: runbook.md
k8s/: configmap.yaml  leader-service.yaml  namespace.yaml  rbac.yaml  service.yaml  statefulset.yaml
scripts/: ci_smoke.sh
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  client.py  internal.py  node.py
src/api/schemas/: __init__.py  client.py
src/api/services/: __init__.py  client_replication.py  readiness.py
src/core/: command.py  config.py  exceptions.py  key_value_store.py  log.py  logging.py  metrics.py  node.py  peer_client.py  peer_http_client.py  protocol.py  role_state.py  rpc.py  types.py
src/core/network/: rpc.py
src/core/raft/: election_strategy.py  heartbeat_strategy.py  key_value_store.py  log.py  node.py  node_interface.py  role_state.py
src/core/types/: __init__.py  types_command.py  types_log.py  types_node.py  types_rpc.py
src/core/util/: timer.py
src/rpc/: protocol.py  rpc.py
tests/: conftest.py  test_api_node_routes.py  test_client_routes.py  test_command.py  test_config.py  test_internal_ready.py  test_key_value_store.py  test_log.py  test_logging.py  test_node_unit.py  test_peer_http_client.py  test_protocol.py  test_quorum_matrix.py  test_raft_correctness.py  test_rpc.py  test_shutdown.py  test_snapshot_compaction.py  test_timer.py
tests/integration/: test_large_log_recovery.py  test_restart_rejoin_continuity.py  test_transport_failures.py
(+9 files in other folders)
