[project]
name = "kvstore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "aiohttp>=3.11.0",
    "kubernetes>=34.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "mypy>=1.18.2",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
files = ["src/core/config.py", "src/core/peer_http_client.py", "src/core/raft/log.py"]

[tool.coverage.run]
source = [
    "src.core.raft",
    "src.core.peer_http_client",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 75
